<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4867AA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/xdsfs" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:hint="@string/name"
            android:textColorHint="@color/gray"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="30dp"
            />
        <EditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/gray"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="30dp"
            />
        <EditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:hint="@string/nhapmatkhau"
            android:password="true"
            android:textColorHint="@color/gray"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginBottom="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:hint="Ngày"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
            <EditText
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:hint="Tháng"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:hint="Năm"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:text="Nam"
                android:textColor="@color/white"
                android:textSize="20dp"

                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Nữ"
                android:textColor="@color/white"
                android:textSize="20dp"
                />
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng ký"
            android:textSize="23dp"
            android:layout_marginTop="40dp"
            android:background="@color/green"/>
    </LinearLayout>
</RelativeLayout>